ffixing spacing issue with profile button

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -228,6 +228,10 @@ body {
         display: none;
       }
 
+      .show\:#{$key} {
+        display: inline-block;
+      }
+
       .full\:#{$key} {
         width: 100%;
       }
@@ -295,6 +299,21 @@ body {
       .container {
         padding: 0;
       }
+    }
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 0.25rem;
+  }
+
+  @media screen and (min-width: 0) and (max-width: $media-sm) {
+    .header {
+      margin-left: 0.25rem;
+      margin-right: 0.25rem;
     }
   }
 
